# arch-zfs-iso-test

./: .gitignore  arch-zfs-iso-test.cabal  package.yaml  stack.yaml  test.sh
app/: Main.hs
src/: File.hs  Main.hs  Scancode.hs  VM.hs
