name:                arch-zfs-iso-test
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     VM
  other-modules:       File
                     , Scancode
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , directory
                     , filepath
                     , process
                     , temporary
  default-language:    Haskell2010

executable arch-zfs-iso-test
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , arch-zfs-iso-test
                     , text
  default-language:    Haskell2010
